--- a/app/src/main/res/drawable/red_button.xml
+++ b/app/src/main/res/drawable/red_button.xml
@@ -1,5 +1,8 @@
-<!-- res/drawable/button_background.xml -->
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <solid android:color="#FD0D0D" />
-    <corners android:radius="16dp" />
-</shape>
+<?xml version="1.0" encoding="utf-8"?>
+<ripple xmlns:android="http://schemas.android.com/apk/res/android"
+    android:color="?android:attr/colorControlHighlight">
+
+    <!-- 自定义按钮背景 -->
+    <item android:drawable="@drawable/red_background" />
+
+</ripple>
