--- a/app/src/main/res/layout/activity_edit_account.xml
+++ b/app/src/main/res/layout/activity_edit_account.xml
@@ -50,7 +50,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        android:background="@drawable/button_background"
+        android:background="@drawable/blue_button"
         android:text="更改賬號密碼"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
