--- a/app/src/main/res/layout/activity_edit_personal_info.xml
+++ b/app/src/main/res/layout/activity_edit_personal_info.xml
@@ -200,7 +200,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
-                android:background="@drawable/button_background"
+                android:background="@drawable/blue_button"
                 android:text="確認更改"
                 android:textColor="@color/white" />
         </LinearLayout>
