--- a/app/src/main/res/layout/activity_email_register.xml
+++ b/app/src/main/res/layout/activity_email_register.xml
@@ -102,7 +102,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        android:background="@drawable/button_background"
+        android:background="@drawable/blue_button"
         android:text="注冊"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
