--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -63,7 +63,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="16dp"
-        android:background="@drawable/button_background"
+        android:background="@drawable/blue_button"
         android:text="重設密碼"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
