新增可檢舉違規事項頁面，檢舉紀錄頁面

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,4 +6,12 @@
     </style>
 
     <style name="Theme.TrafficViolationDetection" parent="Base.Theme.TrafficViolationDetection" />
+    <style name="Theme.TrafficViolationDetection.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+    <style name="Theme.TrafficViolationDetection.AppBarOverlay"
+        parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+    <style name="Theme.TrafficViolationDetection.PopupOverlay"
+        parent="ThemeOverlay.AppCompat.Light" />
 </resources>
