recycle view untest

--- a/app/src/main/res/layout/activity_cars_log.xml
+++ b/app/src/main/res/layout/activity_cars_log.xml
@@ -57,10 +57,13 @@
             android:textSize="20sp" />
     </RadioGroup>
 
-    <ListView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginTop="10dp"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/logs"
+        android:layout_width="409dp"
+        android:layout_height="601dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginEnd="40dp"
+        android:layout_marginBottom="2dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
